package com.iluwatar.my_bridge_0;

public class DarkColorMode implements ColorMode {

	public String primaryColor() {
		return "#000000";
	}

	public String secondaryColor() {
		return "#002500";
	}

	public String accentsColor() {
		return "#FF0000";
	}
	
	
}
