package com.iluwatar.my_bridge_0;

public class LightColorMode implements ColorMode {

	public String primaryColor() {
		return "#FFFFFF";
	}

	public String secondaryColor() {
		return "#FFAAFF";
	}

	public String accentsColor() {
		return "#00FF00";
	}

	
}
